# TianbaAgent

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  _start.py  app.py  config.py  pyproject.toml  run.sh  tianba.bat
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml
agent/memory/: config.py  conversation_store.py  service.py
agent/prompt/: builder.py  workspace.py
agent/protocol/: agent.py  agent_stream.py
agent/skills/: frontmatter.py
bridge/: agent_bridge.py  agent_event_handler.py  agent_initializer.py  bridge.py
channel/: channel.py
channel/dingtalk/: dingtalk_channel.py  dingtalk_message.py
channel/feishu/: feishu_message.py
channel/qq/: qq_channel.py  qq_message.py
channel/terminal/: terminal_channel.py
channel/web/: chat.html  web_channel.py
channel/wecom_bot/: wecom_bot_message.py
channel/weixin/: weixin_channel.py  weixin_message.py
cli/: __init__.py  cli.py  utils.py
cli/commands/: context.py  install.py  knowledge.py  process.py  skill.py
common/: cloud_client.py
docker/: Dockerfile.latest  build.latest.sh  docker-compose.yml  entrypoint.sh
models/gemini/: google_gemini_bot.py
plugins/: README.md
plugins/banwords/: banwords.py
plugins/hello/: README.md
plugins/keyword/: keyword.py
plugins/linkai/: README.md  linkai.py
plugins/role/: role.py
plugins/tianba_cli/: __init__.py  tianba_cli.py
plugins/tool/: README.md
scripts/: run.ps1  shutdown.sh
skills/: README.md
skills/image-generation/: SKILL.md
skills/knowledge-wiki/: SKILL.md
skills/pdf-generator/: SKILL.md
voice/baidu/: README.md
(+14 files in other folders)
