[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tianbaagent"
version = "1.0.0"
description = "TianbaAgent - AI Agent on WeChat and more"
requires-python = ">=3.7"
dependencies = [
    "click>=8.0",
    "requests>=2.28.2",
]

[project.scripts]
tianba = "cli.cli:main"

[tool.setuptools.packages.find]
include = ["cli*", "agent*", "bridge*", "channel*", "common*", "models*", "plugins*", "voice*", "translate*"]
